P7/k8s/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
    kompose.version: 1.37.0 (HEAD)
  labels:
    io.kompose.service: api-gateway
  name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api-gateway
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
        kompose.version: 1.37.0 (HEAD)
      labels:
        io.kompose.service: api-gateway
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: env
          image: esdrasjnl/api-gateway:latest
          name: api-gateway
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
