P7/k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
    kompose.version: 1.37.0 (HEAD)
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
        kompose.version: 1.37.0 (HEAD)
      labels:
        io.kompose.service: frontend
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: env
          image: esdrasjnl/frontend:latest
          name: frontend
          ports:
            - containerPort: 3000
              protocol: TCP
      restartPolicy: Always
