P7/k8s/mysql-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
    kompose.version: 1.37.0 (HEAD)
  labels:
    io.kompose.service: mysql-db
  name: mysql-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mysql-db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
        kompose.version: 1.37.0 (HEAD)
      labels:
        io.kompose.service: mysql-db
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: appdb
          image: mysql:8.0
          livenessProbe:
            exec:
              command:
                - mysqladmin
                - ping
                - -uroot
                - -prootpass
            failureThreshold: 5
            periodSeconds: 10
          name: mysql-db
          ports:
            - containerPort: 3306
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-data
            - mountPath: /docker-entrypoint-initdb.d/init.sql
              name: mysql-db-cm1
              readOnly: true
              subPath: init.sql
      restartPolicy: Always
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-data
        - configMap:
            items:
              - key: init.sql
                path: init.sql
            name: mysql-db-cm1
          name: mysql-db-cm1
