P7/k8s/orders-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
    kompose.version: 1.37.0 (HEAD)
  labels:
    io.kompose.service: orders-service
  name: orders-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: orders-service
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
        kompose.version: 1.37.0 (HEAD)
      labels:
        io.kompose.service: orders-service
    spec:
      containers:
        - env:
            - name: DB_PASSWORD
              value: rootpass
            - name: DB_USER
              value: root
          image: esdrasjnl/orders-service:latest
          name: orders-service
          ports:
            - containerPort: 4000
              protocol: TCP
      restartPolicy: Always
