P7/k8s/backend-deploy.yaml
# user-service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  namespace: practicas_sa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user
          image: esdrasjnl/user-service:latest
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: user
  namespace: practicas_sa
spec:
  selector:
    app: user
  ports:
    - port: 4000
  type: ClusterIP

# product-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
  namespace: practicas_sa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
        - name: product
          image: esdrasjnl/product-service:latest
          ports:
            - containerPort: 4100
---
apiVersion: v1
kind: Service
metadata:
  name: product
  namespace: practicas_sa
spec:
  selector:
    app: product
  ports:
    - port: 4100
  type: ClusterIP

# orders-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
  namespace: practicas_sa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          image: esdrasjnl/orders-service:latest
          ports:
            - containerPort: 4200
---
apiVersion: v1
kind: Service
metadata:
  name: orders
  namespace: practicas_sa
spec:
  selector:
    app: orders
  ports:
    - port: 4200
  type: ClusterIP

# api-gateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: practicas_sa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: esdrasjnl/api-gateway:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: practicas_sa
spec:
  selector:
    app: api-gateway
  ports:
    - port: 80
      targetPort: 3000
  type: LoadBalancer
