P7/k8s/orders-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
    kompose.version: 1.37.0 (HEAD)
  labels:
    io.kompose.service: orders-service
  name: orders-service
spec:
  ports:
    - name: "4002"
      port: 4002
      targetPort: 4000
  selector:
    io.kompose.service: orders-service
