P7/k8s/product-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s/
    kompose.version: 1.37.0 (HEAD)
  labels:
    io.kompose.service: product-service
  name: product-service
spec:
  ports:
    - name: "4001"
      port: 4001
      targetPort: 4000
  selector:
    io.kompose.service: product-service
