P7/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: practicas-ingress
  namespace: practicas_sa
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: practicas.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 80
